# RAT

./: .gitignore  .readthedocs.yaml  README.md  dev-environment.yml  env.yml  environment.yml  meta.yaml  mkdocs.yml  pyproject.toml  setup.py  test_env.yml
.conda-recipe/: meta.yaml
.github/workflows/: draft-pdf.yaml  meta.yaml  python-package-conda.yaml  python-package-conda.yml  python-package-pypi.yaml  run-tests-dev.yaml  run-tests.yaml  run_tests.yaml  test.yaml
backend/params/: rat_mekong.conf  rat_mekong.yml
backend/params/metsim/: domain.nc  params.yaml
backend/params/routing/: DRT_FDR_VIC.asc  route_param.txt  stations_xy.txt  uh.txt
backend/params/rvic/: conversion_params.txt
backend/params/vic/: domain.nc  vic_params.txt
backend/scripts/: how_to_use_logger.py  run_rat.py  run_rat.sh  temp_toplevel.py
backend/scripts/core/: forecast_metsim.py  generate_plots.py  run_altimetry.py  run_metsim.py  run_postprocessing.py  run_routing.py  run_sarea.py  run_sarea_old.py  (+2 more)
conda/: meta.yaml
docs/: development_guide.md  index.md  requirements.txt
docs/Applications/: WebApp.md
docs/Commands/: cli_commands.md  python_commands.md
docs/Configuration/: basins_metadata.md  rat_config.md  secrets.md
docs/Contact/: contact.md
docs/Development/: DeveloperVersion.md  DevelopmentGuide.md  PatchNotes.md  RecentAdjustments.md
docs/Disclaimer/: disclaimer.md
docs/Model/: ComputationalModel.md  ConceptualModel.md
docs/Motivation/: motivation.md
docs/Plugins/: Forecasting.md  Resorr.md  low_latency_mode.md
docs/Preparation/: GettingReady.md
docs/QuickStart/: GettingReady.md  UserGuide.md
docs/RAT_Data/: DirectoryStructure.md  GlobalDatabase.md
docs/Tutorials/: KarnatakaFloods.md
docs/css/: extra.css
extras/fallback_routing/: routing_inputs.ipynb
extras/metsim_try3/: analyze_output.ipynb
main/scripts/: rat.py  run_rat.py
notebooks/: Create_domain.ipynb  Untitled.ipynb  analyze_inflow.ipynb  analyze_results.ipynb  create_forcings.ipynb  create_params.ipynb  create_rvic_params.ipynb  creating_forcings.ipynb  hotfixes.ipynb  metsim_input_prep.ipynb  metsim_input_prep_archive.ipynb  post_process_nc.ipynb
paper/: paper.bib  paper.md
src/RAT/: rat.py
src/rat/: rat_basin.py  run_rat.py
src/ratpy/: rat.py
tests/: test_imports.py  test_rat_gunnison.py
(+105 files in other folders)
