[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rat"
version = "3.0.0.alpha.1"
authors = [
  { name="Pritam Das", email="pdas47@uw.edu" },
  { name="Sanchit Minocha", email="msanchit@uw.edu" },
]
description = "Resevoir Monitoring using Satellite Remote Sensing"
requires-python = ">=3.6"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/UW-SASWE/RAT"
"Bug Tracker" = "https://github.com/UW-SASWE/RAT/issues"